deployment/gcp-prod/gke/emqx-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: emqx
spec:
  ports:
  - port: 1883
    name:  mqtt-port
    targetPort:  1883
    protocol: TCP
  - port: 8883
    name:  mqtt-ssl-port
    targetPort: 8883 
    protocol: TCP
  - port: 18083
    name:  emqx-dashboard
    targetPort:  18083
    protocol: TCP
  - port: 8083
    targetPort: 8083
    name:  mqtt-ws-port
    protocol: TCP
  selector:
    app: emqx
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: emqxinet
spec:
  ports:
  - port: 1883
    targetPort: 1883
    name:  mqtt-port
    protocol: TCP
  - port: 8883
    targetPort: 8883
    name:  mqtt-ssl-port
    protocol: TCP
  selector:
    app: emqx
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: emqx
  labels:
        app: emqx
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: emqx
    spec:
      containers:
      - name: emqx
        image: emqx/emqx:latest
        ports:
        - name: emqx-dashboard
          containerPort: 18083
        - name: mqtt-port
          containerPort: 1883
        - name: mqtt-ssl-port
          containerPort: 8883
        - name: mqtt-ws-port
          containerPort: 8083
