deployment/gcp-prod/gke/ingress-mqtt.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-mqtt
  annotations:
    # Use a static ip
    kubernetes.io/ingress.class: "nginx"
    nginx.org/websocket-services: "emqx"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    certmanager.k8s.io/issuer: "letsencrypt-dev"
    certmanager.k8s.io/acme-challenge-type: http01
    # enable session persistence for one or multiple services

spec:
  rules:
    - host: mqtt-tpi.nebulae.com.co
      http:
        paths:
        - path: /
          backend:
              serviceName: emqx
              servicePort: 8083
  tls:
    - hosts:
      - mqtt-tpi.nebulae.com.co
      secretName: mqtt-tpi-wss
      #  backend:
      #    serviceName: emqx
      #    servicePort: 8083
