deployment/gcp-prod/gke/ingress-txplux-manizales.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-txplux-maz
  annotations:
    # Use a static ip
    kubernetes.io/ingress.class: "nginx"
    #certmanager.k8s.io/issuer: "letsencrypt-dev"
    cert-manager.io/issuer: letsencrypt
    certmanager.k8s.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    #kubernetes.io/ingress.allow-http: "false"
    #kubernetes.io/ingress.global-static-ip-name: ip-txplux
    # enable session persistence for one or multiple services

spec:  
  rules:
  - host: appm.txplus.com.co
    http:
      paths:  
      - path: /
        backend:
          serviceName: frontend-pwa-client
          servicePort: 80
  tls:
      - hosts:
        - appm.txplus.com.co
        secretName: tls-txplus-maz1
