deployment/gcp-prod/gke/ingress-txplux.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-txplux
  annotations:
    # Use a static ip
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: ip-txplux
    kubernetes.io/ingress.allow-http: "false"
    certmanager.k8s.io/issuer: "letsencrypt-dev"
    certmanager.k8s.io/acme-challenge-type: http01
    # enable session persistence for one or multiple services

spec:  
  rules:
  - host: app.txplus.com.co
    http:
      paths:  
      - path: /*
        backend:
          serviceName: frontend-pwa-client
          servicePort: 80
  tls:
      - hosts:
        - app.txplus.com.co
        secretName: tpi-tls-txplus
